--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ machine:
   node:
     version: 6.2.0
    environment:
-      PROJECT_NAME: {INSERT PROJECT NAME}
+      PROJECT_NAME: circleci-demo-go
 dependencies:
   pre:
     - go get github.com/aktau/github-release
