--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,20 @@
+
+
+
+
 version: 2 # use CircleCI 2.0
 jobs: # basic units of work in a run
+  publish-github-release:
+    docker:
+      - image: cibuilds/github:0.10
+    steps:
+      - attach_workspace:
+          at: ./artifacts
+      - run:
+          name: "Publish Release on GitHub"
+          command: |
+            VERSION=$(my-binary --version)
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
       # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
@@ -69,3 +84,11 @@ workflows:
   build-workflow:
     jobs:
       - build
+      - publish-github-release:
+         requires:
+           - build
+         filters:
+           branches:
+             ignore: /.*/
+           tags:
+             only: /^\d+\.\d+\.\d+$/
